# noughts-crosses-grpc-rust

./: Cargo.toml  README.md  build.rs  server.Dockerfile
.github/workflows/: ci.yaml
proto/: game.proto  health.proto  noughts_crosses.proto  user.proto
src/: client.rs  pb.rs  server.rs
