[package]
name = "noughts-crosses-grpc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="server"
path="./src/server.rs"

[[bin]]
name="client"
path="./src/client.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.2.7", features = ["derive"] }
log = { version = "0.4.17", features = ["kv_unstable"] }
env_logger = "0.10.0"

[build-dependencies]
tonic-build = "0.9"
built = "0.5"
